test/arrays/opaque/bradc/nilAccess.good
nilAccess.chpl:9: error: indexing opaque array using nil index
